--- a/subsites/test-data-factory/docs/docs/release-notes/1.4.md
+++ b/subsites/test-data-factory/docs/docs/release-notes/1.4.md
@@ -1,6 +1,6 @@
 # 1.4
 
-Version ID: 04t09000000vCWn
+**Version ID:** 04t09000000vCWn
 
 -   Fix issue [#3](https://github.com/kratapps/test-data-factory/issues/3) -
     Values defaulted on created are ignored.
