--- a/subsites/test-data-factory/docs/docs/release-notes/2.0.md
+++ b/subsites/test-data-factory/docs/docs/release-notes/2.0.md
@@ -1,6 +1,6 @@
 # 2.0
 
-Version ID: 04tJ80000000RPFIA2
+**Version ID:** 04tJ80000000RPFIA2
 
 -   Complete refactoring.
 -   Add `sobj.BaseSObjectFactory` with a new builder pattern.
