--- a/subsites/one-logger/docs/docs/release-notes/1.59.md
+++ b/subsites/one-logger/docs/docs/release-notes/1.59.md
@@ -4,5 +4,5 @@
 
 **API**
 
--   Fix missing apex class access to log from the REST API. See
+-   Fix: Add missing apex class access to log from the REST API. See
     [docs](https://docs.kratapps.com/one-logger/docs/api/rest-api-logging/).
